--- a/package.json
+++ b/package.json
@@ -9,18 +9,37 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@nestjs/apollo": "^10.0.8",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.8",
+    "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.6.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
+    "graphql": "^16.3.0",
+    "mongoose": "^6.2.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.9.4",
     "@nrwl/cypress": "13.9.4",
     "@nrwl/eslint-plugin-nx": "13.9.4",
     "@nrwl/jest": "13.9.4",
     "@nrwl/linter": "13.9.4",
+    "@nrwl/nest": "^13.9.4",
+    "@nrwl/node": "13.9.4",
     "@nrwl/react": "13.9.4",
     "@nrwl/web": "13.9.4",
     "@nrwl/workspace": "13.9.4",
