--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@iconify/react": "^3.2.0",
     "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
@@ -17,6 +18,7 @@
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
+    "antd": "^4.19.3",
     "apollo-server-express": "^3.6.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -25,6 +27,7 @@
     "mongoose": "^6.2.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^6.2.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
